webclient and refactoring